# examples

./: .pre-commit-config.yaml  CODEOWNERS  README.md
agentic-rag-authorization/: .env.example  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_ui.py  test_dataset_integration.py  test_improvements.py
agentic-rag-authorization/agentic_rag/: __init__.py  authorization_helpers.py  config.py  graph.py  grpc_helpers.py  logging_config.py  node_helpers.py  state.py  validation.py  weaviate_client.py
agentic-rag-authorization/agentic_rag/nodes/: __init__.py  authorization_node.py  generation_node.py  reasoning_node.py  retrieval_node.py
agentic-rag-authorization/api/: __init__.py  config.py  main.py  models.py  routes.py
agentic-rag-authorization/data/: PERMISSIONS.md  schema.zed
agentic-rag-authorization/data/documents/: engineering-architecture-001.txt  engineering-architecture-002.txt  engineering-architecture-003.txt  engineering-architecture-004.txt  engineering-architecture-005.txt  engineering-guide-006.txt  engineering-guide-007.txt  engineering-guide-008.txt  engineering-guide-009.txt  engineering-guide-010.txt  engineering-memo-011.txt  engineering-memo-012.txt  engineering-memo-013.txt  engineering-spec-014.txt  (+34 more)
agentic-rag-authorization/examples/: __init__.py  basic_example.py  setup_environment.py
agentic-rag-authorization/scripts/: parse_documents.py  verify_permissions.py
agentic-rag-authorization/tests/: __init__.py  conftest.py  test_basic_flow.py
agentic-rag-authorization/ui/: index.html
(+106 files in other folders)
