[project]
name = "agentic-rag-weaviate"
version = "0.1.0"
description = "Agentic RAG with fine-grained authorization using Weaviate and SpiceDB"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.0.20",
    "langchain-spicedb>=0.1.0",
    "weaviate-client>=4.4.0",
    "authzed>=0.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_backend"

[tool.setuptools]
packages = ["agentic_rag", "agentic_rag.nodes", "agentic_rag.tools"]

[tool.setuptools.package-data]
agentic_rag = ["py.typed"]
